// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHeader should render correctly buy trade 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      {
        "alignItems": "flex-end",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#65A519"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      stacked sats
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderColor": "#FCCCB6",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 15,
                  "letterSpacing": 0.54,
                  "lineHeight": 26,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          P‑1C8
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a funding escrow transaction with contract id 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      {
        "alignItems": "flex-end",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      funded escrow
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderColor": "#FCCCB6",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 15,
                  "letterSpacing": 0.54,
                  "lineHeight": 26,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          PC‑7B‑1C8
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a funding escrow transaction with offer id 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      {
        "alignItems": "flex-end",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      funded escrow
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderColor": "#FCCCB6",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 15,
                  "letterSpacing": 0.54,
                  "lineHeight": 26,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          P‑1C8
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a receiving transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#65A519"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      received to wallet
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a refund transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      {
        "alignItems": "flex-end",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      refunded
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FEEDE5",
            "borderColor": "#FCCCB6",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 4,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2B1911",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textAlign": "center",
                  "textTransform": "uppercase",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 15,
                  "letterSpacing": 0.54,
                  "lineHeight": 26,
                  "textTransform": "uppercase",
                },
              ],
              false,
            ]
          }
        >
          PC‑7B‑1C8
        </Text>
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for an outgoing transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 32,
            },
            {
              "fontFamily": "Baloo2-Bold",
              "fontSize": 24,
              "letterSpacing": 0.24,
              "lineHeight": 32,
            },
          ],
          false,
        ]
      }
    >
      sent from wallet
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    />
  </View>
</View>
`;
